--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 	  		<div class="portfolio-col-2">
 	  		<img src="img/mir.png" alt="Мир">
 	  		 <h3 class="portfolio-block">Сайт платежной системы «Мир»</h3>
-	  		 <p class="portfolio-text">Обновленная версия сайта знакомит посетителей с компаниями, уже принимающими карты к оплате, и приглашает всех остальных присоединиться к проекту...</p>
-	  		 <a href="#">Смотреть работу</a>	
+	  		 <p class="portfolio-text"> PERMANENT EXPERT – это федеральная сеть студий перманентного макияжа, расположенная в 6 городах России. Наши мастера – профессионалы и победители Европейский конкурсов по перманентному макияжу и микроблендингу. Мы разработали авторскую технику, благодаря которой макияж выглядит максимально естественно.</p>
+	  		 <a href="http://permanentexpert.ru/?utm_source=smm_vk&utm_medium=gruppa_kazan&utm_campaign=razdel_ssylki">Смотреть работу</a>	
 	  		</div>
 	  	</div>
 	  	<!-- /.col-6 -->
