--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	  	<div class="col-md-6">
 	  		<div class="portfolio-col-2">
 	  		<img src="img/mir.png" alt="Мир">
-	  		 <h3 class="portfolio-block">Сайт платежной системы «Мир»</h3>
+	  		 <h3 class="portfolio-block">PERMANENT EXPERT-перманентный макияж</h3>
 	  		 <p class="portfolio-text"> PERMANENT EXPERT – это федеральная сеть студий перманентного макияжа, расположенная в 6 городах России. Наши мастера – профессионалы и победители Европейский конкурсов по перманентному макияжу и микроблендингу. Мы разработали авторскую технику, благодаря которой макияж выглядит максимально естественно.</p>
 	  		 <a href="http://permanentexpert.ru/?utm_source=smm_vk&utm_medium=gruppa_kazan&utm_campaign=razdel_ssylki">Смотреть работу</a>	
 	  		</div>
